2008-03-09  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	* configure.ac:
	  Prepare the release.

2008-02-27  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	  Make it actually buildable :/

2008-02-26  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	  Comment and logging changes.

2008-02-23  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/module.c:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/bmltest_info.c:
	* tests/testmachine.sh:
	  More logging tweaks. Added work arounds to get some borked machines
	  working. Gather info about remaining issues.

2008-02-23  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/module.c:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c:
	* src/BuzzMachineLoader.dll:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* tests/testmachine.sh:
	  Tune logging to be a bit less verbose. Implement more wrapped API, got
	  more machines working.

2008-02-19  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Reorder init calls.

	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	  No need to clear auxuffer.

2008-02-18  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* tests/testmachine.sh:
	  Get more details and also link to the results.

	* src/bmltest_info.c:
	  Do fflush to increase the likelyhood we have the logs complete.  

2008-02-17  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Format comment.

	* TODO:
	* src/bmltest_info.c:
	* tests/sorttable.js:
	* tests/testmachine.sh:
	  Generate html result table.

2008-02-16  Stefan Kost  <ensonic@users.sf.net>
